response no sabemos como seguir

--- a/config_files/all_ok.yml
+++ b/config_files/all_ok.yml
@@ -16,7 +16,7 @@ server:
 server:
   servername: site2.com
   listen: 127.0.0.1:61002
-  root: "./www/site2"
+  root: "./html/segunda_pagina"
   location: /
     file: "index.html"
   location: "/favicon.ico"
