cgi se como se va a organizar en el conf, vamos a coger html, txt y dos tipos de fotos yya

--- a/config_files/all_ok.yml
+++ b/config_files/all_ok.yml
@@ -10,8 +10,10 @@ server:
     file: "hola.html"
   location: "/favicon.ico"
     file: "icon1.png"
+  location: "/hola2"
+    file: "hola2.txt"
   location: "/cgi-bin"
-    file: "cgi.py"
+    file: "cgiscript.py"
 
 server:
   servername: site2.com
