--- a/config_files/all_ok.yml
+++ b/config_files/all_ok.yml
@@ -11,7 +11,7 @@ server:
   location: "/hola2"
     file: "hola2.txt"
   location: "/cgi-bin"
-    file: "cgiscript.py"
+    file: "cgi-bin/cgiscript.py"
 
 server:
   servername: site2.com
@@ -23,6 +23,8 @@ server:
     file: "icon2.png"
   location: "/images/sample"
     file: "images/sample_image2.png"
+  location: "/cgi-bin"
+    file: "cgi-bin/cgiscript1.py"
 
 server:
   servername: site3.com
