--- a/config_files/all_ok.yml
+++ b/config_files/all_ok.yml
@@ -11,7 +11,8 @@ server:
   location: "/hola2"
     file: "hola2.txt"
   location: "/cgi-bin"
-    file: "cgi-bin/cgiscript.py"
+    file: "cgi-bin/calc.html"
+    cgi: "cgi-bin/cgiscript.py"
 
 server:
   servername: site2.com
@@ -24,12 +25,13 @@ server:
   location: "/images/sample"
     file: "images/sample_image2.png"
   location: "/cgi-bin"
-    file: "cgi-bin/cgiscript1.py"
+    file: "cgi-bin/otrocgi.html"
+    cgi: "cgi-bin/cgiscript1.py"
 
 server:
   servername: site3.com
   listen: 127.0.0.1:61003
-  root: "./www/site3"
+  root: "./html/tercera_pagina"
   location: /
     file: "index.html"
   location: "/favicon.ico"
