--- a/config_files/test.yml
+++ b/config_files/test.yml
@@ -1,7 +1,7 @@
 server:
   servername: sitex.com
   listen: 127.0.0.1:61001
-  root: "./www/site3"
+  root: "./html/primera_pagina"
   location: /
     file: "index.html"
   location: "/favicon.ico"
@@ -19,3 +19,4 @@ server:
     file: "icon2.png"
   location: "/images/sample"
     file: "images/sample_image2.png"
+
