queda poder sacar imagenes, POST, CGI POST, y despues probar todo tipo de configuraciones

--- a/config_files/conf.yml
+++ b/config_files/conf.yml
@@ -4,7 +4,8 @@ server:
   root: "./html/primera_pagina"
   buffer_size: 100000
   location: /
-    autoindex: on
+    file: "index.html"
+    autoindex: off
   location: "/goto42"
     redirect: "http://www.42urduliz.com"
   location: "/hola"
