esta casi hecho

--- a/config_files/conf.yml
+++ b/config_files/conf.yml
@@ -3,8 +3,7 @@ server:
   listen: 127.0.0.1:61001
   root: "./html/primera_pagina"
   location: /
-    file: "index.html"
-    autoindex: off
+    autoindex: on
   location: "/goto42"
     redirect: "http://www.42urduliz.com"
   location: "/hola"
@@ -12,6 +11,8 @@ server:
   location: "/cgi-bin"
     file: "cgi-bin/calc.html"
     cgi: "cgi-bin/cgiscript.py"
+  location: "/upload"
+    autoindex: on
 
 server:
   servername: site2.com
