--- a/config_files/conf.yml
+++ b/config_files/conf.yml
@@ -2,15 +2,21 @@ server:
   servername: site1.com
   listen: 127.0.0.1:61001
   root: "./html/primera_pagina"
+  buffer_size: 100000000
   location: /
     file: "index.html"
   location: "/goto42"
     redirect: "http://www.42urduliz.com"
   location: "/hola"
-    file: "hola.html"
+    file: "hola/hola.html"
   location: "/cgi-bin"
     file: "cgi-bin/calc.html"
     cgi: "cgi-bin/cgiscript.py"
+  location: "/post.html"
+    file: "post.html"
+  location: "/delete.html"
+    file: "delete.html"
+    allow: GET POST
   location: "/upload"
     autoindex: on
 
